[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi_camera_calibration"
version = "0.0.1"
dependencies = [
    "numpy"
]
requires-python = ">=3.8"
authors = [
    {name = "Mason Peterson", email = "mbpeterson70@gmail.com"}
]
description = "Package for calibrating multiple cameras."
readme = "README.md"
license = "MIT"


